<resources>
    <string name="app_name">Theater GOLD</string>
    <string name="navigation_open">Otvori</string>
    <string name="navigation_close">Zatvori</string>
    <string name="name_app">Theater GOLD</string>
    <string name="sati_oznaka">h</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_application_title">Informacije o aplikaciji</string>
    <string name="image_gallery">Kazališna galerija</string>
    <string name="tekstCijene">Pregled cijena korištenih za rezervaciju ulaznica.
        Za rezervaciju se koriste cijene s najnovijim datumom!</string>
    <string name="admin_reservation_title">Pregled ponude za</string>
    <string name="admin_reservation_tab1">Detalji</string>
    <string name="admin_reservation_tab2">Ulaznice</string>
    <string name="admin_reservation_tab3">Statistika</string>
    <string name="search">Unesite pojam po kojemu želite pretraživati!</string>
    <string name="notFound">Provjerite upisani pojam, te pokušajte ponovno!</string>
    <string name="snackbarText">Predstava je uklonjena iz favorita!</string>
    <string name="sve">Sve</string>
    <string name="aktivno">Aktivno</string>
    <string name="proslo">Prošlo</string>
    <string name="cijene">*Cijene ulaznica se odnose na populaciju: djeca do 10 god., odrasli > 10 godina.</string>
    <string name="profilData">Popunite polja s podacima!</string>
    <string name="izbornikText">Brzi izbornik</string>
    <string name="izbornikUser">Pregled glavnih funkcija:</string>
    <string name="user_question_title">Najčešća pitanja</string>
    <string name="izbornik">Izbornik</string>
    <string name="administratorski_izbornik">Administratorski izbornik</string>
    <string name="zadrzati_email">Zadržati e-mail adresu?</string>
    <string name="ucitavanje_resursa">Učitavanje resursa</string>
    <string name="naslovPretrazi">Pretraga</string>
    <string name="opisPretrazi">Uključuje pregled, brisanje, te ažuriranje podataka predstave. </string>
    <string name="menuPretrazi">Pretraživanje predstava</string>
    <string name="menuRezervacija">Pregled rezervacija</string>
    <string name="naslovRezervacija">Rezervacije</string>
    <string name="opisRezervacija">Pregled i izmjena podataka predstave, te prikaz statistike.</string>
    <string name="naslovNovo">Unos</string>
    <string name="menuNovo">Unos predstava i ponuda</string>
    <string name="opisNovo">Uključuje unos novih predstava i njihovih pripadnih ponuda. </string>
    <string name="menuProfil">Upravljanje profilom</string>
    <string name="naslovProfil">Profil</string>
    <string name="opisProfila">Uključuje pregled i ažuriranje podataka + novi admin. </string>
    <string name="menuCijena">Upravljanje cijenama</string>
    <string name="naslovCijene">Cijene</string>
    <string name="opisCijene">Uključuje dodavanje i brisanje cijena. Dodatno sortira cijene. </string>
    <string name="menuPitanja">Pregled pitanja</string>
    <string name="naslovPitanja">Pitanja</string>
    <string name="opisPitanja">Obuhvaća pregled, unos i brisanje najčešćih pitanja.</string>
    <string name="menuPregled">Pregled predstava</string>
    <string name="naslovPregled">Pregled</string>
    <string name="opisPregled">Pretraživanje i pregled podataka odabranih predstava.</string>
    <string name="menuKarte">Rezervacija ulaznica</string>
    <string name="naslovKarte">Rezervacija</string>
    <string name="opisKarte">Uključuje rezervaciju ulaznica odabrane predstave.</string>
    <string name="menuPregledRezervacija">Pregled rezervacija</string>
    <string name="naslovPregledRezervacija">Ulaznice</string>
    <string name="opisPregledRezervacija">Omogućuje prikaz rezerviranih ulaznica i prikaz favorita.</string>
    <string name="menuRacun">Korisnički račun</string>
    <string name="naslovRacun">Račun</string>
    <string name="opisRacun">Uključuje pregled i izmjenu osobnih korisničkih podataka.</string>
    <string name="menuCijene">Pregled cijena</string>
    <string name="opisCijena">Omogućuje pregled najnovijih cijena ulaznica po datumu.</string>
    <string name="naslovCijena">Cijene</string>
    <string name="text_on">Uključeno</string>
    <string name="text_off">Isključeno</string>
    <string name="moj_izbor">Moj izbor</string>
    <string name="odaberite_datum">Odaberite datum:</string>
    <string name="odabrani_datum">-odabrani datum-</string>
    <string name="pretrazivanje_datum">Pretraživanje po datumu:</string>
    <string name="nema_rezultata">Nije pronađen rezultat!</string>
    <string name="nema_predstava">Trenutno nema predstava za prikazati!</string>
    <string name="spremi">Spremi</string>
    <string name="unesi_ime">Unesite ime</string>
    <string name="unesi_prezime">Unesite prezime</string>
    <string name="unesi_adresu">Unesite e-mail</string>
    <string name="unesi_broj">Unesite broj</string>
    <string name="unesi_lozinku">Unesite novu lozinku</string>
    <string name="potvrdi_lozinku">Ponovi lozinku</string>
    <string name="korisnicki_racun">Korisnički račun</string>
    <string name="upravljanje_profilom">Upravljaj profilom</string>
    <string name="promjena_podataka">Promjena podataka</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="Telefon">Broj telefona:</string>
    <string name="email">E-mail adresa:</string>
    <string name="lozinka">Lozinka:</string>
    <string name="potvrda_lozinke">Potvrda lozinke:</string>
    <string name="korisnik">Korisnik</string>
    <string name="prijavite_se_naslov">Prijavite se</string>
    <string name="nemate_racun">Nemate korisnički račun?</string>
    <string name="registrirajte_se">Registrirajte se!</string>
    <string name="novi_admin">Novi administrator</string>
    <string name="administrator">Administrator</string>
    <string name="registracija_korisnika">Registracija korisnika</string>
    <string name="prijava_korisnika">Prijava korisnika</string>
    <string name="registracija_naslov">registrirajte se</string>
    <string name="ime_unos">Unesite ime:</string>
    <string name="prezime_unos">Unesite prezime:</string>
    <string name="broj_unos">Unesite broj telefona:</string>
    <string name="email_unos">Unesite e-mail adresu:</string>
    <string name="lozinka_ponovno">Ponovite lozinku:</string>
    <string name="lozinka_unos">Unesite lozinku:</string>
    <string name="otvoreni_racun">Imate otvoreni račun?</string>
    <string name="prijavite_se">Prijavite se!</string>
    <string name="registracija_gumb">Registriraj se</string>
    <string name="kupi">Kupi</string>
    <string name="vrijeme_raspored">Vrijeme:</string>
    <string name="datum">Datum</string>
    <string name="danas">Danas</string>
    <string name="naslov">Naslov</string>
    <string name="kategorija">Kategorija</string>
    <string name="vrijeme">Vrijeme</string>
    <string name="naziv_predstave">Naziv predstave:</string>
    <string name="pregled_kategorija">Kategorija:</string>
    <string name="pregled_datum">Datum:</string>
    <string name="pregled_kolicina">Kolicina</string>
    <string name="ulaznice_djeca">Cijene za djecu:</string>
    <string name="ulaznice_odrasli">Cijene za odrasle:</string>
    <string name="ulaznice_studenti">Cijene za studente:</string>
    <string name="ulaznice_umirovljenici">Cijene za umirovljenike:</string>
    <string name="ulaznice_dan_kupnje">Cijene na dan kupnje:</string>
    <string name="ulaznice_premijera">Cijene premijere:</string>
    <string name="brisanje_cijene">Želite li izbrisati cijenu?</string>
    <string name="ulaznice_cijene">Cijene ulaznica</string>
    <string name="cijene_na_dan_priakzivanja">Cijene na dan prikazivanja:</string>
    <string name="cijene_vrijede">Cijene vrijede od:</string>
    <string name="ulaznice_iznos">Iznos [kn]</string>
    <string name="cijene_pregled">Cijene</string>
    <string name="dobno_ogranicenje">Dobna kategorija</string>
    <string name="upute_cijene">*Korisnik je posjetitelj aplikacije koji može rezervirati najmanje jednu ulaznicu.
                                 Sve cijene su izražene u kunama i uključuju PDV. Konačne cijene rezervacija se obračunavaju u skladu s propisanim pravilima kazališta.
                                Ukoliko se ne slažete s navedenim, molimo Vas da ne koristite dalje ovu aplikaciju.
                               </string>
    <string name="nema_cijene">0 kn</string>
    <string name="izbrisi">Izbriši</string>
    <string name="close">X</string>
    <string name="unos_cijene">Unos cijene</string>
    <string name="tekst_unosa_cijene">Unos cijene ulaznica po kategorijama!</string>
    <string name="datum_unosa">Datum unosa:</string>
    <string name="cijene_djeca">Cijene za djecu:</string>
    <string name="cijene_odrasli">Cijene odrasli:</string>
    <string name="cijene_studenti">Cijene studenti:</string>
    <string name="cijene_umirovljenici">Cijene umirovljenici:</string>
    <string name="cijena_danas">Cijena za danas: </string>
    <string name="unesite_cijenu">Unesite cijenu</string>
    <string name="spremi_cijenu">Spremi cijenu</string>
    <string name="tekst_pitanje_odgovor">Unesite pitanje i odgovor</string>
    <string name="unos_pitanja">Unesite pitanje:</string>
    <string name="unos_odgovora">Unesite odgovor:</string>
    <string name="spremi_pitanje">Spremi pitanje</string>
    <string name="potvrda">Potvrda</string>
    <string name="rezervirano">Rezerevirano:</string>
    <string name="cijena">Cijena</string>
    <string name="rezervirana_ulaznica">Rezervirana ulaznica:</string>
    <string name="kategorija_ulaznice">Kategorija:</string>
    <string name="datum_prikazivanja">Datum prikazivanja:</string>
    <string name="vrijeme_prikazivanja">Vrijeme prikazivanja:</string>
    <string name="broj_ulaznica">Broj ulaznica:</string>
    <string name="ukupna_cijena">Ukupna cijena:</string>
    <string name="ukupno">Ukupno</string>
    <string name="status_potvrde">Status potvrde:</string>
    <string name="Korisnik_novo">Korisnik:</string>
    <string name="izbrisi_rezervaciju">Izbriši rezervaciju</string>
    <string name="prikaz_rezervacije">Prikaz rezervacije</string>
    <string name="datum_rezervacije">Datum rezerviranja:</string>
    <string name="broj">Broj</string>
    <string name="potvrda_placanja">Potvrda plaćanja:</string>
    <string name="sifra_ulaznice">Šifra ulaznice:</string>
    <string name="sifra">Šifra</string>
    <string name="popis_ulaznica">Popis ulaznica:</string>
    <string name="trenutno_stanje">Trenutno stanje:</string>
    <string name="da">Da</string>
    <string name="ne">Ne</string>
    <string name="tekst_predstave">Unos predstave</string>
    <string name="naziv">Naziv:</string>
    <string name="unos_predstave">Unesite naziv predstave</string>
    <string name="datum_predstave">Datum predstave:</string>
    <string name="odaberite_slike_predstave">Odaberite slike s predstave:</string>
    <string name="tekst_predstava">Opis predstave:</string>
    <string name="unesi_opis">Unesite opis</string>
    <string name="redatelj">Redatelji:</string>
    <string name="unos_redatelja">Unesite redatelja</string>
    <string name="glumci">Glumci:</string>
    <string name="unos_glumaca">Unesite glumce:</string>
    <string name="dramaturgija">Dramaturgija:</string>
    <string name="unos_dramaturgije">Unesite dramaturge</string>
    <string name="kostimografija">Kostimografija:</string>
    <string name="unos_kostimografa">Unesite kostimografe</string>
    <string name="scenografija">Scenografija:</string>
    <string name="unos_scenografa">Unesite scenografe</string>
    <string name="glazba">Glazbeni izvođači:</string>
    <string name="unos_glazbe">Unesite izvođače</string>
    <string name="koreografija">Koreografija:</string>
    <string name="odaberi_filter">Odaberite filtar:</string>
    <string name="sutra">Sutra</string>
    <string name="mjesec">Mjesec</string>
</resources>