<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#222742"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="0dp"
        android:layout_weight="0.1"
        android:background="@drawable/theater_mask"
        android:contentDescription="@string/name_app"
        android:paddingStart="10dp"
        android:paddingEnd="0dp" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/naslovOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/naslov"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kategorijaOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/kategorija"
            android:textColor="#8C8787" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/datumOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datum"
                android:textColor="#8C8787" />

            <TextView
                android:id="@+id/vrijemeOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/vrijeme"
                android:textColor="#8C8787" />
            </LinearLayout>
        </LinearLayout>

    <ImageView
        android:id="@+id/rowDelete"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0.1"
        android:background="@drawable/ic_delete_black_24dp"
        android:contentDescription="@string/name_app"
        android:paddingStart="0dp"
        android:paddingEnd="5dp" />
</LinearLayout>